--- a/src/rust/rust-utils/Cargo.toml
+++ b/src/rust/rust-utils/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "kernel-lib"
-description = "Generic functionality that should be testable in a normal environment."
+name = "utils"
+description = "A few common utils. I made them separate to test them easilier."
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4.14"
