--- a/src/rust/rust-kernel/rust-toolchain.toml
+++ b/src/rust/rust-kernel/rust-toolchain.toml
@@ -2,6 +2,6 @@
 # https://rust-lang.github.io/rustup/overrides.html
 
 [toolchain]
-# equals to Rust nightly 1.55 as of the release day 2021-06-17
-channel = "nightly-2021-06-17"
+# Rust nightly 1.59
+channel = "nightly-2022-01-03"
 components = [ "rust-src", "rust-std", "rustc", "cargo" ]
